add responseEntity example