@@ -1,6 +1,7 @@
 package ir.maktabsharif127.main.controller;
 
 import ir.maktabsharif127.main.dto.UserBriefDTO;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -19,12 +20,23 @@ public class UserController {
 //    @GetMapping("/{id}/addresses")
 //    @GetMapping("/{id}/wallet")
     @GetMapping
-    public List<UserBriefDTO> getAllUsers() {
-        return List.of(
-                new UserBriefDTO(1L, "mohsen", "asgari", null, true, null),
-                new UserBriefDTO(2L, "mohsen", "asgari", null, true, Collections.emptyList()),
-                new UserBriefDTO(32L, "mohsen", "asgari", new UserBriefDTO(), false, List.of("1", "2"))
-        );
+    public ResponseEntity<List<UserBriefDTO>> getAllUsers() {
+//        return ResponseEntity.ok(
+//                List.of(
+//                        new UserBriefDTO(1L, "mohsen", "asgari", null, true, null),
+//                        new UserBriefDTO(2L, "mohsen", "asgari", null, true, Collections.emptyList()),
+//                        new UserBriefDTO(32L, "mohsen", "asgari", new UserBriefDTO(), false, List.of("1", "2"))
+//                )
+//        );
+        return ResponseEntity.status(201)
+                .header("my-header", "my-header-value")
+                .body(
+                        List.of(
+                                new UserBriefDTO(1L, "mohsen", "asgari", null, true, null),
+                                new UserBriefDTO(2L, "mohsen", "asgari", null, true, Collections.emptyList()),
+                                new UserBriefDTO(32L, "mohsen", "asgari", new UserBriefDTO(), false, List.of("1", "2"))
+                        )
+                );
     }
 
 }
